--- a/src/Plugins/McMaster.NETCore.Plugins.csproj
+++ b/src/Plugins/McMaster.NETCore.Plugins.csproj
@@ -5,6 +5,8 @@
     <OutputType>library</OutputType>
     <IsPackable>true</IsPackable>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageId>BTCPayServer.NETCore.Plugins</PackageId>
+    <Version>1.4.1</Version>
     <PackageDescription>Provides API for dynamically loading assemblies into a .NET application.
 
 This package should be used by the host application which needs to load plugins.
